<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leontrans.leontranstm.basepart.filters.editor.DocsSelectorDialog"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/doc_switcher_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/tir" />

            <Switch
                android:id="@+id/doc_switcher_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/cmr" />

            <Switch
                android:id="@+id/doc_switcher_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/ekmt" />

            <Switch
                android:id="@+id/doc_switcher_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/t1" />

            <Switch
                android:id="@+id/doc_switcher_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/mbook" />

            <Switch
                android:id="@+id/doc_switcher_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/customscontrol" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/cancel_filter_btn"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_filter_btn"/>
    </LinearLayout>
</LinearLayout>
